generalizing source field, either utm_source or regSource

--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -60,7 +60,7 @@
                 $("#error").html("");
                 document.getElementById("signup").action = formAction;
                 document.getElementById("state").value = qs["state"];
-                document.getElementById("regSource").value = qs["regSource"] || null;
+                document.getElementById("source").value = qs["source"] || null;
                 document.getElementById("signup").submit();
               }
             },
