--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -155,7 +155,7 @@
           </div>
           <form method="GET" id="signup" action="#">
             <input id="state" name="state" value="" type="hidden" />
-            <input id="regSource" name="regSource" value="" type="hidden" />
+            <input id="source" name="source" value="" type="hidden" />
             <div id="hd" class="input-field active">
               <label for="handle">Enter your handle</label>
               <input
