adding new version of auth setup lib, login with redirect

--- a/web-assets/static-pages/index.html
+++ b/web-assets/static-pages/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="./images/favicon.ico" />
-    <script src="./setupAuth0.js"></script>
+    <script src="./setupAuth0WithRedirect.js"></script>
     <script type="text/javascript" src="https://cdn.userway.org/widget.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
@@ -36,7 +36,7 @@
           <a id="contentarea" tabindex="-1"></a>
           <h1 id="page-title-heading" class="page-title-heading">loading...</h1>
           <p class="page-description">
-            Wait - Login pop-up is loading...
+            Wait Login/Logout processing ...
           </p>
         </main>
       </div>
