--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -53,6 +53,8 @@
           <form method="GET" id="signup" action="#">
             <input id="state" name="state" value="" type="hidden" />
             <input id="source" name="source" value="" type="hidden" />
+            <input id="utmCampaign" name="utmCampaign" value="" type="hidden" />
+            <input id="utmMedium" name="utmMedium" value="" type="hidden" />
             <div id="hd" class="input-field active">
               <label for="handle">Enter your handle</label>
               <input
