--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -55,6 +55,7 @@
             <input id="source" name="source" value="" type="hidden" />
             <input id="utmCampaign" name="utmCampaign" value="" type="hidden" />
             <input id="utmMedium" name="utmMedium" value="" type="hidden" />
+            <input id="returnUrl" name="returnUrl" value="" type="hidden" />
             <div id="hd" class="input-field active">
               <label for="handle">Enter your handle</label>
               <input
