--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -52,7 +52,8 @@
           </div>
           <form method="GET" id="signup" action="#">
             <input id="state" name="state" value="" type="hidden" />
-            <input id="source" name="source" value="" type="hidden" />
+            <input id="regSource" name="regSource" value="" type="hidden" />
+            <input id="utmSource" name="utmSource" value="" type="hidden" />
             <input id="utmCampaign" name="utmCampaign" value="" type="hidden" />
             <input id="utmMedium" name="utmMedium" value="" type="hidden" />
             <input id="returnUrl" name="returnUrl" value="" type="hidden" />
