loading message change if login/logout action is called.

--- a/web-assets/static-pages/index.html
+++ b/web-assets/static-pages/index.html
@@ -35,7 +35,7 @@
         <main id="main" class="page-main">
           <a id="contentarea" tabindex="-1"></a>
           <h1 id="page-title-heading" class="page-title-heading">loading...</h1>
-          <p class="page-description">
+          <p class="page-description" id="loading_message_p">
             Wait Login/Logout processing ...
           </p>
         </main>
