signup page heading

--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -39,8 +39,8 @@
         </header>
         <main id="main" class="page-main">
           <a id="contentarea" tabindex="-1"></a>
-          <h1 id="page-title-heading" class="page-title-heading clip-me">
-            Signup
+          <h1 id="page-title-heading" class="page-title-heading">
+            JOIN TOPCODER
           </h1>
           <div class="messages">
             <div role="alert" class="message error">
@@ -58,7 +58,7 @@
             <input id="utmMedium" name="utmMedium" value="" type="hidden" />
             <input id="returnUrl" name="returnUrl" value="" type="hidden" />
             <div id="hd" class="input-field active">
-              <label for="handle">Enter your handle</label>
+              <label for="handle">Enter Username</label>
               <input
                 id="handle"
                 name="handle"
