Issues-115: updated links

--- a/web-assets/static-pages/register_success.html
+++ b/web-assets/static-pages/register_success.html
@@ -43,7 +43,7 @@
                please email <a href="mailto:support@topcoder.com">support@topcoder.com</a>.
                That shouldn't happen though and if it does, we are sorry!
              </li>
-             <li>Want to keep browsing? <a href="/">Home</a> / <a href="Learn">Learn</a> / <a href="Freelance Gigs">Freelance Gigs</a></li>
+             <li>Want to keep browsing? <a href="/">Home</a> / <a href="/community/learn">Learn</a> / <a href="/gigs">Freelance Gigs</a></li>
            </ul>
           </div>
         </main>
