--- a/web-assets/static-pages/register_success.html
+++ b/web-assets/static-pages/register_success.html
@@ -22,7 +22,7 @@
       <!-- Page Content Area -  Header + Main content -->
       <div class="page-content">
         <header class="header">
-          <a href="/" class="logo-link">
+          <a href="https://topcoder.com/" class="logo-link">
             <img
               src="./images/logo_dark.png"
               alt="Topcoder Logo"
@@ -43,7 +43,7 @@
                please email <a href="mailto:support@topcoder.com">support@topcoder.com</a>.
                That shouldn't happen though and if it does, we are sorry!
              </li>
-             <li>Want to keep browsing? <a href="/">Home</a> / <a href="/community/learn">Learn</a> / <a href="/gigs">Freelance Gigs</a></li>
+             <li>Want to keep browsing? <a href="https://topcoder.com/">Home</a> / <a href="https://topcoder.com/community/learn">Learn</a> / <a href="https://topcoder.com/gigs">Freelance Gigs</a></li>
            </ul>
           </div>
         </main>
