Issues-117: Update registaration confirmation design

--- a/web-assets/static-pages/register_success.html
+++ b/web-assets/static-pages/register_success.html
@@ -39,11 +39,12 @@
           <div class="page-description">
            <ul>
              <li>Check your email and activate your account.</li>
-             <li>If the email doesn't arrive right away,
-               please email <a href="mailto:support@topcoder.com">support@topcoder.com</a>.
-               That shouldn't happen though and if it does, we are sorry!
+             <li>Don't see an email? Try spam just in case. You can also
+               request to have us <a href="">resend the activation email</a>.
+               If you still have any issues, you can always email <a href="mailto:support@topcoder.com">support@topcoder.com</a>.
              </li>
-             <li>Want to keep browsing? <a href="https://topcoder.com/">Home</a> / <a href="https://topcoder.com/community/learn">Learn</a> / <a href="https://topcoder.com/gigs">Freelance Gigs</a></li>
+             <li>Want to keep browsing?<br/><a href="https://www.topcoder.com/community/learn">Learn</a> / <a href="https://www.topcoder.com/gigs">Freelance Gigs</a> /
+               <a href="https://www.topcoder.com/community/arena">Competitive Programming</a> </li>
            </ul>
           </div>
         </main>
