removing resend link

--- a/web-assets/static-pages/register_success.html
+++ b/web-assets/static-pages/register_success.html
@@ -39,8 +39,7 @@
           <div class="page-description">
            <ul>
              <li>Check your email and activate your account.</li>
-             <li>Don't see an email? Try spam just in case. You can also
-               request to have us <a href="">resend the activation email</a>.
+             <li>Don't see an email? Try spam just in case.
                If you still have any issues, you can always email <a href="mailto:support@topcoder.com">support@topcoder.com</a>.
              </li>
              <li>Want to keep browsing?<br/><a href="https://www.topcoder.com/community/learn">Learn</a> / <a href="https://www.topcoder.com/gigs">Freelance Gigs</a> /
