--- a/web-assets/static-pages/register_success.html
+++ b/web-assets/static-pages/register_success.html
@@ -38,12 +38,11 @@
           </h1>
           <div class="page-description">
            <ul>
-             <li>Check your email and activate your account.</li>
-             <li>If the email doesn't arrive right away,
-               please email <a href="mailto:support@topcoder.com">support@topcoder.com</a>.
-               That shouldn't happen though and if it does, we are sorry!
+             <li>Check your email and activate your account</li>
+             <li>Don't see an email?  Try spam just in case.  you can also request to have us <a href="#">resend the activation email</a>.  If you still have any issues, you can always email <a href="mailto:support@topcoder.com">support@topcoder.com</a>.
+               
              </li>
-             <li>Want to keep browsing? <a href="https://topcoder.com/">Home</a> / <a href="https://topcoder.com/community/learn">Learn</a> / <a href="https://topcoder.com/gigs">Freelance Gigs</a></li>
+             <li>Latest Topcoder News <a href="https://www.topcoder.com/blog/category/community-stories/">Community Stories</a> / <a href="https://www.topcoder.com/blog/category/customer-success/">Customer Success</a> / <a href="https://www.topcoder.com/blog/category/future-of-work/">Future of Work</a></li>
            </ul>
           </div>
         </main>
