--- a/web-assets/static-pages/check_email.html
+++ b/web-assets/static-pages/check_email.html
@@ -44,8 +44,8 @@
                If you still have any issues, you can always email <a href="mailto:support@topcoder.com">support@topcoder.com</a>.
                </span>
              </li>
-             <li><span>Want to keep browsing?<br/><a href="https://www.topcoder.com/community/learn">Learn</a> / <a href="https://www.topcoder.com/gigs">Freelance Gigs</a> /
-               <a href="https://www.topcoder.com/community/arena">Competitive Programming</a></span></li>
+             <li><span>Latest Topcoder News<br/><a href="https://www.topcoder.com/blog/category/community-stories/?s=&so=&o=">Community Stories</a> / <a href="https://www.topcoder.com/blog/category/customer-success/?s=&so=&o=">Customer Success</a> /
+               <a href="https://www.topcoder.com/blog/category/future-of-work/?s=&so=&o=">Future of Work</a></span></li>
            </ul>
           </div>
         </main>
