--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -17,7 +17,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
-    <script src="https://authlib.topcoder-dev.com/country.js"></script>
+    <script src="https://tc-public-static-files.topcoder.com/topcoder-auth/js/country.js"></script>
     <script type="text/javascript" src="signup.js"></script>
   </head>
   <body class="center-align-card">
