removing resend link for the time being

--- a/web-assets/static-pages/check_email.html
+++ b/web-assets/static-pages/check_email.html
@@ -39,8 +39,7 @@
           </h2>
           <div class="page-description">
            <ul>
-             <li><span>Don't see an email? Try spam just in case. You can also
-               request to have us <a href="">resend the activation email</a>.
+             <li><span>Don't see an email? Try spam just in case.
                If you still have any issues, you can always email <a href="mailto:support@topcoder.com">support@topcoder.com</a>.
                </span>
              </li>
