--- a/web-assets/static-pages/check_email.html
+++ b/web-assets/static-pages/check_email.html
@@ -23,10 +23,11 @@
       return b;
     })(window.location.search.substr(1).split("&"));
     window.addEventListener("load", () => {
-      if (qs['state']) {
+      var state = qs['state'];
+      if (state) {
         document.querySelector("#resend").addEventListener("click", e => {
           e.preventDefault();
-          window.location = 'https://auth.topcoder-dev.com/continue?state=' + qs[state] + '&resend=true';
+          window.location = 'https://auth.topcoder-dev.com/continue?state=' + state + '&resend=true';
         });
       }
     });
@@ -54,7 +55,7 @@
         <div class="page-description">
           <ul>
             <li><span>Don't see an email? Try spam just in case. You can also request to have us <a href="#"
-                  id="resend">resend the
+                  id="resend">resend </a> the
                   activation email
                   If you still have any issues, you can always email <a
                     href="mailto:support@topcoder.com">support@topcoder.com</a>.
