--- a/web-assets/static-pages/check_email.html
+++ b/web-assets/static-pages/check_email.html
@@ -24,11 +24,10 @@
     })(window.location.search.substr(1).split("&"));
     window.addEventListener("load", () => {
       var state = qs['state'];
-      var handle = qs['handle'];
-      if (state && handle) {
+      if (state) {
         document.querySelector("#resend").addEventListener("click", e => {
           e.preventDefault();
-          window.location = 'https://auth.topcoder-dev.com/continue?state=' + state + '&resend=1&handle=' + handle;
+          window.location = 'https://auth.topcoder-dev.com/continue?state=' + state + '&resend=1';
         });
       }
     });
