--- a/web-assets/static-pages/check_email.html
+++ b/web-assets/static-pages/check_email.html
@@ -30,7 +30,7 @@
           window.location = 'https://auth.topcoder-dev.com/continue?state=' + state + '&resend=1';
         });
       } else {
-        document.querySelector("#resend-txt").style.display = "none";
+        document.querySelector("#resend-text").style.display = "none";
       }
     });
   </script>
