fixing css issue

--- a/web-assets/static-pages/check_email.html
+++ b/web-assets/static-pages/check_email.html
@@ -56,11 +56,14 @@
         </h2>
         <div class="page-description">
           <ul>
-            <li><span>Don't see an email? Try spam just in case. <span id="resend-text" >You can also request to have us <a href="#"
-              id="resend">resend </a> the
-              activation email.</span>
-                  If you still have any issues, you can always email <a
-                    href="mailto:support@topcoder.com">support@topcoder.com</a>.
+            <li><span>Don't see an email? Try spam just in case.
+                <span id="resend-text" style="position:static;">
+                  You can also request to have us
+                  <a href="#" id="resend">resend </a>
+                  the activation email.
+                </span>
+                If you still have any issues, you can always email <a
+                  href="mailto:support@topcoder.com">support@topcoder.com</a>.
               </span>
             </li>
             <li><span>Latest Topcoder News<br /><a
