adding user privacy policy link

--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -104,7 +104,19 @@
                       <path id="Shape" d="M7,10 L12,15 L17,10 L7,10 Z"></path></g></g></g></g></g></svg></span>
             </div>
             <div class="terms">
-              <span>By clicking "Sign up", you agree to the <a href="https://www.topcoder.com/policy/terms-and-conditions" target="_blank" rel="noopener noreferrer">Terms</a> and <a href="https://www.topcoder.com/policy/privacy-policy" target="_blank" rel="noopener noreferrer">Privacy Policy</a> of Topcoder.</span>
+              <span>
+                <input id='user_privacy_policy' type="checkbox" value="on">
+                <label>
+                  <span>
+                    I agree to the <a href="https://www.topcoder.com/policy/privacy-policy" target="_new">Privacy Policy</a> of Topcoder.
+                    <br/>
+                    By clicking "Sign up", you agree to the <a href="https://www.topcoder.com/policy/terms-and-conditions"
+                      target="_blank" rel="noopener noreferrer">Terms</a> and <a
+                      href="https://www.topcoder.com/policy/privacy-policy" target="_blank" rel="noopener noreferrer">Privacy
+                      Policy</a> of Topcoder.
+                  </span>
+                </label>
+              </span>
             </div>
             <div id="sb" class="action-wrapper">
               <button
