--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -105,8 +105,8 @@
             </div>
             <div class="terms">
               <span>
-                <input id='user_privacy_policy' type="checkbox" value="on">
                 <label>
+                <input id='user_privacy_policy' type="checkbox" value="on" class="input-text user_pripacy_policy">
                   <span>
                     I agree to the <a href="https://www.topcoder.com/policy/privacy-policy" target="_new">Privacy Policy</a> of Topcoder.
                     <br/>
