--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -111,9 +111,7 @@
                     I agree to the <a href="https://www.topcoder.com/policy/privacy-policy" target="_new">Privacy Policy</a> of Topcoder.
                     <br/>
                     By clicking "Sign up", you agree to the <a href="https://www.topcoder.com/policy/terms-and-conditions"
-                      target="_blank" rel="noopener noreferrer">Terms</a> and <a
-                      href="https://www.topcoder.com/policy/privacy-policy" target="_blank" rel="noopener noreferrer">Privacy
-                      Policy</a> of Topcoder.
+                      target="_blank" rel="noopener noreferrer">Terms</a> of Topcoder.
                   </span>
                 </label>
               </span>
