default country value

--- a/web-assets/static-pages/signup.html
+++ b/web-assets/static-pages/signup.html
@@ -94,7 +94,9 @@
             </div>
             <div id="cc" class="input-field active">
               <label for="country">Choose your country</label>
-              <select id="country" name="country" class="input-text"></select>
+              <select id="country" name="country" class="input-text">
+                <option value='' ></option>
+              </select>
               <span><svg aria-hidden="true" focusable="false" width="5px" height="10px" viewBox="0 0 5 10" version="1.1"
                          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="icon-arrow">
                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g id="Lock" transform="translate(-396.000000, -3521.000000)"
